# PAPER-SUMMARY-AUTOMATION

./: .env.example  .gitignore  CONTRIBUTING.md  INDICE_DOCUMENTACION.md  Makefile  NLP_COMPLETADO.md  PROJECT_SUMMARY.md  README.md  app.py  check_deepseek.py  design_specification.md  diagnostico.py  pyproject.toml  requirements.txt  setup_nltk.py  start_server.bat  test_analysis.py  verify_groq.py
.github/workflows/: ci.yml
data/: README.md
docs/: DEEPSEEK_SETUP.md  DESARROLLO_PASO_A_PASO.md  GROQ_SETUP.md  GUIA_EJECUCION.md  NLP_FEATURES.md  NLP_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  RESUMEN_NLP.md  WEB_APP_NLP.md
examples/: README.md  basic_usage.py  nlp_analysis_demo.py
src/: __init__.py  analyze.py  main.py
src/analysis/: __init__.py  academic_analyzer.py  embeddings.py  llm_analyzer.py  nlp_processor.py
src/ingestion/: __init__.py  base_parser.py  simple_parser.py
src/models/: __init__.py  paper.py
tests/: test_models.py  test_nlp_components.py  test_parsers.py  test_web_api.py
web/: README.md  index.html  script.js  style.css
